fix(API/Apicurio): fix z-index issue with apicurio editor when creating API integration

--- a/app/ui/src/app/integration/edit-page/flow-view/flow-view-multiflow.component.scss
+++ b/app/ui/src/app/integration/edit-page/flow-view/flow-view-multiflow.component.scss
@@ -2,6 +2,7 @@
 
 .multiflow-step {
   position: relative;
+  z-index: -1;
 
   .icon-container {
     width: 55px;
